# xcel_visualization

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
src/: coveragerc  db.sqlite3  manage.py  pytest.ini  resetdb
src/measurements_project/: asgi.py  settings.py  urls.py  wsgi.py
src/xml_measurements/: apps.py  figure_out_the_name.xlsx  forms.py  models.py  start.py  tasks.py  urls.py  utils.py  views.py  xcel.py
src/xml_measurements/migrations/: 0001_initial.py
src/xml_measurements/templates/xml_measurements/: base.html  configuration_delete.html  configuration_list.html  header.html  index.html  inspect.html
static_files/media/: profesori.xlsx  test_tmp.xlsx
