[tool.poetry]
name = "measurements"
version = "0.1.0"
description = "first poetry project"
authors = ["Ailenei Dan <dan.ailenei@rover.com>"]

[tool.poetry.dependencies]
python = "3.8"

celery = {version = "*", extras = ["redis"]}


django = "*"


django-extensions = "*"


hunter = "*"


pytest = "*"


pytest-cov = "*"


pytest-django = "*"
xlrd = "^1.2.0"
ipython = "^7.10.2"
django-formset-js = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
